test/fixtures/valid/test-style-host-alias.fez
<style>
  :host {
    padding: 10px;

    button {
      background: blue;
    }
  }
</style>

<button>hi</button>
