test/fixtures/invalid/test-style-unterminated-comment.fez
<script>
  init() {}
</script>

<div>hello</div>

<style>
  .root {
    padding: 1rem;
    /* unterminated comment
    color: red;
  }
</style>
